# Background-Oriented-Schlieren

./: CMakeCache.txt  CMakeLists.txt  DIC.cpp  DIC.exe.stackdump  DIC.hpp  DetermineN.cpp  DetermineN.hpp  DisplayImage.cpp  DisplayImage.hpp  ExperimentalSetupVariables.hpp  FindCppAD.cmake  InputOut.cpp  InputOut.hpp  InputVariables.hpp  Makefile  Optimization.ods  README.md  SnellsLaw.m  SnellsLaw_mini.m  SnellsLaw_mini3.m  Table.m  Table2.m  a0.tif  a1.tif  a3.tif  calculateN.cpp  calculateN.hpp  calculate_n.m  calculate_n2.m  calculate_n3.m  calibrationfigures.m  cmake_install.cmake  coeff.c  create_TransformationMatrices.m  create_TransformationMatrices2.m  csvload.cpp  csvload.hpp  gmon.out  interpol.c  nfunctiontominimize.m  (+8 more)
1/A0F0/: CorrelationCoefficient.csv  GridX.csv  GridY.csv  U0.csv  U0filter.csv  Ux.csv  V0.csv  Vy.csv  commandline.txt  fresh0000.tif
1/A0S0/: CorrelationCoefficient.csv  GridX.csv  Strat0000.tif  U0.csv  U0filter.csv  V0.csv  air0000.tif
1/A0T0/: CorrelationCoefficient.csv  GridY.csv  TL0000.tif  U0.csv  U0filter.csv  V0.csv
14-12-2018/: DS.tif  TL0.tif  TL1.tif  TL2.tif  WS0.tif  WS1.tif  WS2.tif  air0.tif  air1.tif  air2.tif  fresh0.tif  fresh1.tif  fresh2.tif
5 21 3 3 1 0/: importfile.m
Air - TwoL/: GridX.csv  GridY.csv
Article/: articleBOS.aux  articleBOS.bbl  articleBOS.bcf  articleBOS.bib  articleBOS.blg  articleBOS.dvi  articleBOS.run.xml  articleBOS.tex  articleBOS.tex.blg  calibration_parameters.tex  experimentsInFluids.aux  experimentsInFluids.bbl  experimentsInFluids.bcf  experimentsInFluids.blg  experimentsInFluids.run.xml  experimentsInFluids.tex  schematicsetupangle.tex  schematicsetupangle2.tex  simplemodelderivatives.m  simplesetup.tex
Article/LaTeX_DL_468198_240419/: calibration_parameters.tex  experimentsInFluids.tex  rayequationsderivation.tex  template.bcf  template.tex
BOS/: BOS.aux  BOS.dvi  BOS.tex  file1.txt  schematicsetup.dvi  schematicsetup.tex
DIC/: CMakeLists.txt  DisplayImage.cpp  Makefile  interpol.c  interpol.h  make  nonlineariteration.cpp  nonlineariteration.hpp  pixeltranslation.cpp  pixeltranslation.hpp
air-freshtest2/: Air0.tif  CorrelationCoefficient.csv  GridX.csv  GridY.csv  U0.csv  Ux.csv  Uxx.csv  Uxy.csv  Uy.csv  Uyy.csv  V0.csv  Vx.csv  Vxx.csv  Vxy.csv  Vy.csv  Vyy.csv  commandline.txt  fresh0.tif
series one/disp/air - WS 0/: DU_data.mat  FEM_setup.mat  a1.tif  corr_setup.mat  corr_setup_reduced.mat  disp_initial_data.mat  disp_raw_data.mat  disp_reduced_data.mat  disp_smooth_data.mat  filenamelist.mat  grid_data.mat  grid_reduced_data.mat  grid_scale_data.mat  grid_setup.mat  grid_setup_reduced.mat  valid_data.mat
series one/disp/air - fresh 0/: a0.tif  a1.tif  corr_setup.mat  corr_setup_reduced.mat  disp_initial_data.mat  disp_raw_data.mat  disp_reduced_data.mat  grid_data.mat  grid_reduced_data.mat  grid_setup.mat  grid_setup_reduced.mat  image_setup.mat  valid_data.mat
series one/disp/air - twolayer 0/: a1.tif  corr_setup.mat  corr_setup_reduced.mat  disp_initial_data.mat  disp_raw_data.mat  disp_reduced_data.mat  grid_data.mat  grid_reduced_data.mat  grid_setup.mat  grid_setup_reduced.mat  valid_data.mat
