cmake_minimum_required (VERSION 2.8)
project (DIC)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable (DIC DisplayImage.cpp)
set (LIBSRC DisplayImage.hpp PointsWithValue.hpp pixeltranslation.hpp pixeltranslation.cpp nonlineariteration.hpp 
nonlineariteration.cpp coeff.h coeff.c interpol.h interpol.c)
add_library(coeff STATIC ${LIBSRC})
target_link_libraries( DIC coeff ${OpenCV_LIBS} )
#set(CMAKE_CXX_FLAGS "-O3")
#set(CMAKE_C_FLAGS "-O3")
#set(CMAKE_CXX_FLAGS "-g")
#set(CMAKE_C_FLAGS "-g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -march=native -pg")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ofast -march=native -pg")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
